# poker-engine

./: CMakeLists.txt  Eval.cpp  Makefile  README.md  card.cpp  card.h  deck.cpp  deck.h  game.cpp  game.h  handrank.cpp  handrank.h  main.cpp  player.cpp  player.h
